# cacx-lesion-segmentation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cacx_seg/: __init__.py  cli.py  config.py  device.py  export.py  inference.py  model.py  overlap.py  postprocess.py  tta.py  visualize.py
notebooks/: inference_demo.ipynb
scripts/: download_weights.py
tests/: test_pipeline.py
